--- a/index.html
+++ b/index.html
@@ -11,33 +11,11 @@
 
     <title>Template</title>
   </head>
-  <body>
+  <body class="indexBoutique">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+        <div id="nav-placeholder">
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Catalog<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Stores</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-              </li>
-            </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <i class="fas fa-search"></i>
-        </form>
-      </div>
-  </nav>
+        </div>
       <div class="title">
         <h1>SUNDAYS</h1>
         <h2>We craft ocean friendly apparel</h2>
@@ -52,45 +30,15 @@
         </div>
       </div>
     </main>
-    <footer>
-      <div class="container">
-        <div class="row" id="fooTer">
-          <div class="col-12 col-md-3">
-            <h3>Quick links</h3>
-            <ul>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Careers</a></li>
-            </ul>
-          </div>
-          <div class="col-12 col-md-3">
-            <h3>Contact us</h3>
-            <ul>
-              <li><i class="fab fa-twitter"></i><a href="#">@californiatheme</a></li>
-              <li><i class="fas fa-envelope"></i><a href="#">support@smallvictories.co</a></li>
-              <li><i class="fas fa-phone"></i><a href="#">+1 917 (123) 4567</a></li>
-            </ul>
-          </div>
-          <div class="col-12 col-md-3">
-            <h3>Newsletter</h3>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="mr-sm-2" type="search" placeholder="Your email..." aria-label="Your email">
-              <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">OK</button>
-            </form>
-          </div>
-          <div class="col-12 col-md-3">
-            <h3>Follow us</h3>
-            <ul>
-              <li><i class="fab fa-pinterest"></i><a href="#">Pinterest</a></li>
-              <li><i class="fab fa-instagram"></i><a href="#">Instagram</a></li>
-              <li><i class="fab fa-vimeo"></i><a href="#">Vimeo</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer>
-
+    <div id="footer-placeholder">
+        
+    </div>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script>$(function(){
+        $('#nav-placeholder').load("nav.html");
+        $('#footer-placeholder').load("footer.html");
+    })
+    </script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/catalog_x10.js"></script>
     <script src="js/app.js"></script>
