--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="fr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -10,37 +11,79 @@
     <link rel="stylesheet" href="css/style.css">
 
     <title>Template</title>
-  </head>
-  <body class="portfolio">
+</head>
+
+<body class="portfolio">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">CODINCAMP</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Catalog<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Stores</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
-              </li>
-            </ul>
-      </div>
-  </nav>
-</header>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">PORTFOLIO<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">CONTACT</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <h1>A SIMPLE THEME</h1>
+        <h2>Web Developper - Graphic Artist - User Experience Designer</h2>
+    </header>
+    <main>
+        <section class="porfolio">
+            <h2>PORTFOLIO</h2>
+            <div>
+                <img src="https://picsum.photos/g/300/200" alt="">
+                <img src="https://picsum.photos/g/300/200" alt="">
+                <img src="https://picsum.photos/g/300/200" alt="">
+                <img src="https://picsum.photos/g/300/200" alt="">
+                <img src="https://picsum.photos/g/300/200" alt="">
+                <img src="https://picsum.photos/g/300/200" alt="">
+            </div>
+        </section>
+
+        <section class="about">
+            <h2>ABOUT</h2>
+            <p>The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
+
+            <p>My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you the first motherfucker to get shot. You understand?</p>
+
+            <button type="button" name="button">Download Theme</button>
+        </section>
+
+        <section class="contact">
+            <p>The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
+        </section>
+
+        <footer>
+            <section class="footer">
+                <h3>LOCATION</h3>
+                <p>3481 Melrose Place Beverly Hills, CA 90210</p>
+
+                <h3>AROUND THE WEB</h3>
+                <p>And you will know My name is the Lord when I lay My vengeance upon thee.</p>
+
+                <h3>ABOUT</h3>
+                <p>Hey, look at me when I'm talking to you, <a href="#">motherfucker.</a></p>
+            </section>
+
+            <section class="copyright">
+                <p>Copyright &copy; Your Website 2016</p>
+            </section>
+        </footer>
 
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/catalog_x10.js"></script>
-    <script src="js/app.js"></script>
-  </body>
+</body>
+
 </html>
